<resources>
    <string name="app_name">Food2Go</string>
    <string name="image_content_description">Image Content</string>
    <string name="check_internet_connection">Please check your internet connection</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_logout">Logout</string>
    <string name="start">Start</string>
    <string name="login_username_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_something_went_wrong">Invalid Email or Password</string>
    <string name="login_empty_username_email">Empty username/email</string>
    <string name="login_empty_password">Empty password</string>
    <string name="fragment_title_my_shop">My Shop</string>
    <string name="fragment_title_home">Home</string>
    <string name="fragment_title_order">Order</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_title_my_shop">My Shop</string>
    <string name="navigation_title_home">Home</string>
    <string name="navigation_title_order">Order</string>
    <string name="navigation_title_error">Error</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_layout_toolbar_name">Toolbar Title</string>
    <string name="title_activity_user_info">User Information</string>
    <string name="title_activity_contact_info">Contact Information</string>
    <string name="title_activity_shop_info">Shop Information</string>
    <string name="title_activity_shop">My Shop</string>
    <string name="title_activity_weekly_payment">Weekly Payment</string>
    <string name="title_nav_drawer_weekly_payment">Weekly Payment</string>
    <string name="title_nav_drawer_report">Report</string>
    <string name="title_nav_drawer_profile">Profile</string>
    <string name="title_nav_drawer_my_shop">My Shop</string>
    <string name="title_nav_drawer_products">Products</string>
    <string name="title_nav_drawer_inventory">Inventory</string>
    <string name="title_nav_drawer_logout">Logout</string>
    <string name="title_layout_nav_header_name">Kervin Jumar Lopez</string>
    <string name="title_layout_nav_header_email">test@gmail.com</string>
    <string name="title_layout_nav_header_role">Admin</string>
    <string name="activity_profile_settings_upload">Upload</string>
    <string name="activity_user_info_first_name">First Name</string>
    <string name="activity_user_info_last_name">Last Name</string>
    <string name="activity_user_info__email_address">Email address</string>
    <string name="activity_user_info_update">Update</string>
    <string name="activity_user_info_add">Add</string>
    <string name="activity_product_add">Create Product</string>
    <string name="activity_product_update">Update Product</string>
    <string name="activity_contact_info_address">Complete Address</string>
    <string name="activity_contact_info_address_primary">Primary Contact</string>
    <string name="activity_contact_info_address_secondary">Secondary Contact</string>
    <string name="activity_shop_name">Shop Name</string>
    <string name="activity_shop_address">Shop Complete Address</string>
    <string name="activity_shop_contact">Shop Contact Number</string>
    <string name="activity_shop_time_open">Opening Time</string>
    <string name="activity_shop_time_close">Closing Time</string>
    <string name="activity_shop_open">Open</string>
    <string name="activity_shop_close">Closed</string>
    <string name="activity_report_date_from">Date From</string>
    <string name="activity_report_date_to">Date To</string>
    <string name="error_message_illegal_argument_exception">Unable to construct action bar</string>
    <string name="required">Required</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_auto_complete">Invalid auto complete</string>
    <string name="invalid_file">Error file</string>
    <string name="error_install_web_browser">Please install a web browser</string>
    <string name="action_label_login">login</string>
    <string name="permission_denied_warning">Some of your permission is permanently denied. Please allow it before proceeding</string>
    <string name="permission_warning">All permissions must be allow in order to work the app properly</string>
    <string name="nav_bar_open">Navigation Bar Open</string>
    <string name="nav_bar_close">Navigation Bar Close</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_no_button">No</string>
    <string name="dialog_yes_button">Yes</string>
    <string name="main_activity_title_logout">Logout?</string>
    <string name="main_activity_are_you_sure_you_want_to_logout">Are  you sure you want to logout?</string>
    <string name="main_activity_button_yes">Yes</string>
    <string name="main_activity_button_no">No</string>
    <string name="main_activity_preparing_logout">Preparing to Logout</string>
    <string name="profile_user_information">User Information</string>
    <string name="profile_contact_information">Contact Information</string>
    <string name="profile_shop_information">Shop Information</string>
    <string name="dialog_product_form_create_button">Create</string>
    <string name="dialog_product_form_cancel_button">Cancel</string>
    <string name="dialog_product_form_delete_button">Delete</string>
    <string name="dialog_product_form_update_button">Update</string>
    <string name="active_store">Active</string>
    <string name="inactive_store">Inactive</string>
    <string name="title_select_image">Select/Get Image</string>
    <string name="layout_empty_list">Empty List</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="tab_text_1">Pending</string>
    <string name="tab_text_2">Preparing</string>
    <string name="tab_text_3">Delivery</string>
    <string name="tab_text_4">Completed</string>
    <string name="dialog_message_order_rejected">Order #%1$s has been rejected.</string>
    <string name="dialog_message_order_preparing">Order #%1$s is added on preparing queue.</string>
    <string name="dialog_message_order_delivery">You move Order #%1$s to Out For Delivery.</string>
    <string name="dialog_message_order_completed">Order #%1$s is now successfully completed.</string>
    <string name="days_ago">days ago</string>
    <string name="day_ago">day ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="minute_ago">minute ago</string>
    <string name="few_seconds_ago">few seconds ago</string>
    <string name="toast_error_payment_image_upload">Select image!</string>
    <string name="toast_error_payment_checkbox">You must check the checkbox to continue payment process!</string>
    <string name="no_data_avail">No data Available</string>
</resources>