<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.profile.sub.ContactInfoActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.kafiesta.screens.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/title_activity_contact_info" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:padding="@dimen/margin_aver_plus"
                app:layout_constraintBottom_toTopOf="@+id/layout_button_update"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_address"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/activity_contact_info_address"
                        android:inputType="text" />
<!--                        android:text="@{viewModel.userResult.userInformations.complete_address}" />-->

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_avg">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_primary_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/activity_contact_info_address_primary"
                        android:inputType="text"/>
<!--                        android:text="@{viewModel.userResult.userInformations.primary_contact}" -->


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_avg">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_second_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/activity_contact_info_address_secondary"
                        android:inputType="text"/>
<!--                        android:text="@{viewModel.userResult.userInformations.secondary_contact}" -->

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <FrameLayout
                android:id="@+id/layout_button_update"
                style="@style/FrameLayoutSection"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_update"
                    style="@style/ButtonShopSection"
                    android:text="@string/activity_user_info_update"
                    android:textAllCaps="false"
                    android:visibility="@{viewModel.isLoading ? View.GONE : View.VISIBLE}" />

                <ProgressBar
                    android:id="@+id/progress_loading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/transparent_white_percent_25"
                    android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}" />

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>