<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />

        <variable
            name="mainViewModel"
            type="com.example.kafiesta.screens.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/include_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_aver_plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/activity_contact_info_address"
                    android:inputType="text"
                    android:text="@{mainViewModel.contact.complete_address}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_avg">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_primary_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/activity_contact_info_address_primary"
                    android:inputType="text"
                    android:text="@{mainViewModel.contact.primary_contact}" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_avg">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_second_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/activity_contact_info_address_secondary"
                    android:inputType="text"
                    android:text="@{mainViewModel.contact.secondary_contact}" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>